<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Panama Lotto</string>
    <string name="buttonOneLabel">Reciente</string>
    <string name="buttonTwoLabel">Sorteos del mes</string>
    <string name="lottoActivityTitle">Ultimo sorteo</string>
    <string name="lottoHistoryTitle">Anteriores</string>
    <string name="first_prize_label">1er premio</string>
    <string name="second_prize_label">2do premio</string>
    <string name="third_prize_label">3er premio</string>
    <string name="serie_label">Serie</string>
    <string name="letters_label">Letras</string>
    <string name="folio_label">Folio</string>
    <string name="gordito_prize">Gordito del Zodiaco</string>
    <string name="es_date_separator"> de </string>
    <string name="pyramid_text">Piramide de la suerte</string>
    <string name="description_logo">L</string>
    <string name="month_1">Enero</string>
    <string name="month_2">Febrero</string>
    <string name="month_3">Marzo</string>
    <string name="month_4">Abril</string>
    <string name="month_5">Mayo</string>
    <string name="month_6">Junio</string>
    <string name="month_7">Julio</string>
    <string name="month_8">Agosto</string>
    <string name="month_9">Septiembre</string>
    <string name="month_10">Octubre</string>
    <string name="month_11">Noviembre</string>
    <string name="month_12">Diciembre</string>
    <string name="weekday_1">Domingo</string>
    <string name="weekday_2">Lunes</string>
    <string name="weekday_3">Martes</string>
    <string name="weekday_4">Miercoles</string>
    <string name="weekday_5">Jueves</string>
    <string name="weekday_6">Viernes</string>
    <string name="weekday_7">Sabado</string>
    <string name="loading_data_text">Cargando sorteos...</string>
    <string name="no_lotto_items">No hay sorteos disponibles</string>
    <string name="piramide_first_label">1</string>
    <string name="piramide_second_label">2</string>
    <string name="piramide_third_label">3</string>
    <string name="alertCanActivate">Activar notificaciones</string>
    <string name="alertCanInactivate">Desactivar notificaciones</string>
    <string name="lotto_notification_key">10</string>
    <string name="lotto_notification_text">Sorteo de la Lotería de Panamá disponible.</string>
    <string name="lotto_notification_label">Panama Lotto - Alerta de sorteo.</string>
    <string name="notification_alert_off_text">Notificación de sorteo desactivada.</string>
    <string name="notification_alert_on_text">Notificación de sorteo activada.</string>
</resources>
